--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html>
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -11,37 +11,16 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Todo-app</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Write</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">임시</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
+    <%- include('nav.html') %>
 
-      <form class="m-4" action="/add" method="POST">
-        <div class="form-group">
-          <label for="exampleInputEmail1">할일</label>
-          <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="title">
-        </div>
-        <div class="form-group">
-          <label for="exampleInputPassword1">Due date</label>
-          <input type="txet" class="form-control" id="exampleInputPassword1" name="date">
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-      </form>
+
+      <div class="jumbotron">
+        <h1 class="display-4">Todo-app</h1>
+        <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+        <hr class="my-4">
+        <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+        <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+      </div>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
