'로그인하고마이페이지'

--- a/views/list.ejs
+++ b/views/list.ejs
@@ -10,7 +10,7 @@
 
     <link rel="stylesheet" href="/public/main.css">
 
-    <title>Hello, world!</title>
+    <title>Todo-app</title>
   </head>
   <body>
 
