--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en">
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -12,15 +12,19 @@
   </head>
   <body>
     <%- include('nav.html') %>
+    
 
-
-      <div class="jumbotron">
-        <h1 class="display-4">Todo-app</h1>
-        <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-        <hr class="my-4">
-        <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-        <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-      </div>
+      <form class="m-4" action="/login" method="POST">
+        <div class="form-group">
+          <label for="exampleInputEmail1">아이디</label>
+          <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="id">
+        </div>
+        <div class="form-group">
+          <label for="exampleInputPassword1">비밀번호</label>
+          <input type="text" class="form-control" id="exampleInputPassword1" name="pw">
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
