--- a/views/mypage.ejs
+++ b/views/mypage.ejs
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en">
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -12,15 +12,8 @@
   </head>
   <body>
     <%- include('nav.html') %>
-
-
-      <div class="jumbotron">
-        <h1 class="display-4">Todo-app</h1>
-        <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-        <hr class="my-4">
-        <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-        <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-      </div>
+    
+    <p><%= User.id %> 마이페이지 입니다.</p>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
